# serializer version: 1
# name: test_avg_aggregation_filter[session-tracked-async-decimal-avg-eq-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.rarity) AS avg_fruits__avg_rarity
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_rarity" = $1::FLOAT
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-async-decimal-avg-eq-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.rarity) AS avg_fruits__avg_rarity
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_rarity" = %(param_1)s
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-async-decimal-avg-gt-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.rarity) AS avg_fruits__avg_rarity
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_rarity" > $1::FLOAT
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-async-decimal-avg-gt-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.rarity) AS avg_fruits__avg_rarity
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_rarity" > %(param_1)s
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-async-float-avg-eq-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_water_percent" = $1::FLOAT
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-async-float-avg-eq-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_water_percent" = %(param_1)s
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-async-float-avg-gt-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_water_percent" > $1::FLOAT
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-async-float-avg-gt-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_water_percent" > %(param_1)s
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-async-int-avg-eq-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.sweetness) AS avg_fruits__avg_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_sweetness" = $1::FLOAT
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-async-int-avg-eq-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.sweetness) AS avg_fruits__avg_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_sweetness" = %(param_1)s
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-async-int-avg-gt-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.sweetness) AS avg_fruits__avg_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_sweetness" > $1::FLOAT
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-async-int-avg-gt-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.sweetness) AS avg_fruits__avg_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_sweetness" > %(param_1)s
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-sync-decimal-avg-eq-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.rarity) AS avg_fruits__avg_rarity
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_rarity" = %(param_1)s
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-sync-decimal-avg-gt-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.rarity) AS avg_fruits__avg_rarity
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_rarity" > %(param_1)s
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-sync-float-avg-eq-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_water_percent" = %(param_1)s
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-sync-float-avg-gt-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_water_percent" > %(param_1)s
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-sync-int-avg-eq-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.sweetness) AS avg_fruits__avg_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_sweetness" = %(param_1)s
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-sync-int-avg-gt-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.sweetness) AS avg_fruits__avg_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_sweetness" > %(param_1)s
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-eq-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" = $1::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-eq-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" = %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-gt-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" > $1::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-gt-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" > %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-gte-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" >= $1::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-gte-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" >= %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-in-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" IN (__[POSTCOMPILE_param_1])
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-in-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" IN (__[POSTCOMPILE_param_1])
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-lt-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" < $1::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-lt-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" < %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-lte-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" <= $1::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-lte-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" <= %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-neq-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" != $1::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-neq-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" != %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-nin-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE (aggregation_0."count_fruits__count_id" NOT IN (__[POSTCOMPILE_param_1]))
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-async-nin-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE (aggregation_0."count_fruits__count_id" NOT IN (__[POSTCOMPILE_param_1]))
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-sync-eq-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" = %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-sync-gt-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" > %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-sync-gte-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" >= %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-sync-in-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" IN (__[POSTCOMPILE_param_1])
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-sync-lt-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" < %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-sync-lte-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" <= %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-sync-neq-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" != %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-sync-nin-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE (aggregation_0."count_fruits__count_id" NOT IN (__[POSTCOMPILE_param_1]))
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-async-default-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.name) AS count_fruits__count_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_name" = $1::INTEGER
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-async-default-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.name) AS count_fruits__count_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_name" = %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-async-distinct-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(DISTINCT fruit_1.name) AS count_fruits__count_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_name" = $1::INTEGER
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-async-distinct-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(DISTINCT fruit_1.name) AS count_fruits__count_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_name" = %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-async-non-distinct-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.name) AS count_fruits__count_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_name" = $1::INTEGER
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-async-non-distinct-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.name) AS count_fruits__count_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_name" = %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-sync-default-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.name) AS count_fruits__count_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_name" = %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-sync-distinct-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(DISTINCT fruit_1.name) AS count_fruits__count_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_name" = %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-sync-non-distinct-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.name) AS count_fruits__count_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_name" = %(param_1)s::INTEGER
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-async-contains-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE (aggregation_0."max_fruits__max_name" LIKE '%' || $1::VARCHAR || '%' ESCAPE '/')
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-async-contains-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE (aggregation_0."max_fruits__max_name" LIKE '%%' || %(param_1)s::VARCHAR || '%%' ESCAPE '/')
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-async-eq-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."max_fruits__max_name" = $1::VARCHAR
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-async-eq-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."max_fruits__max_name" = %(param_1)s::VARCHAR
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-async-ilike-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."max_fruits__max_name" ILIKE $1::VARCHAR
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-async-ilike-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."max_fruits__max_name" ILIKE %(param_1)s::VARCHAR
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-async-like-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."max_fruits__max_name" LIKE $1::VARCHAR
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-async-like-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."max_fruits__max_name" LIKE %(param_1)s::VARCHAR
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-async-startswith-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE (aggregation_0."max_fruits__max_name" LIKE $1::VARCHAR || '%' ESCAPE '/')
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-async-startswith-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE (aggregation_0."max_fruits__max_name" LIKE %(param_1)s::VARCHAR || '%%' ESCAPE '/')
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-sync-contains-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE (aggregation_0."max_fruits__max_name" LIKE '%%' || %(param_1)s::VARCHAR || '%%' ESCAPE '/')
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-sync-eq-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."max_fruits__max_name" = %(param_1)s::VARCHAR
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-sync-ilike-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."max_fruits__max_name" ILIKE %(param_1)s::VARCHAR
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-sync-like-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."max_fruits__max_name" LIKE %(param_1)s::VARCHAR
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-sync-startswith-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE (aggregation_0."max_fruits__max_name" LIKE %(param_1)s::VARCHAR || '%%' ESCAPE '/')
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-async-contains-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE (aggregation_0."min_fruits__min_name" LIKE '%' || $1::VARCHAR || '%' ESCAPE '/')
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-async-contains-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE (aggregation_0."min_fruits__min_name" LIKE '%%' || %(param_1)s::VARCHAR || '%%' ESCAPE '/')
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-async-eq-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."min_fruits__min_name" = $1::VARCHAR
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-async-eq-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."min_fruits__min_name" = %(param_1)s::VARCHAR
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-async-ilike-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."min_fruits__min_name" ILIKE $1::VARCHAR
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-async-ilike-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."min_fruits__min_name" ILIKE %(param_1)s::VARCHAR
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-async-like-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."min_fruits__min_name" LIKE $1::VARCHAR
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-async-like-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."min_fruits__min_name" LIKE %(param_1)s::VARCHAR
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-async-startswith-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE (aggregation_0."min_fruits__min_name" LIKE $1::VARCHAR || '%' ESCAPE '/')
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-async-startswith-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE (aggregation_0."min_fruits__min_name" LIKE %(param_1)s::VARCHAR || '%%' ESCAPE '/')
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-sync-contains-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE (aggregation_0."min_fruits__min_name" LIKE '%%' || %(param_1)s::VARCHAR || '%%' ESCAPE '/')
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-sync-eq-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."min_fruits__min_name" = %(param_1)s::VARCHAR
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-sync-ilike-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."min_fruits__min_name" ILIKE %(param_1)s::VARCHAR
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-sync-like-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."min_fruits__min_name" LIKE %(param_1)s::VARCHAR
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-sync-startswith-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE (aggregation_0."min_fruits__min_name" LIKE %(param_1)s::VARCHAR || '%%' ESCAPE '/')
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-async-decimal-eq-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.rarity) AS sum_fruits__sum_rarity
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_rarity" = $1::FLOAT
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-async-decimal-eq-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.rarity) AS sum_fruits__sum_rarity
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_rarity" = %(param_1)s
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-async-decimal-gt-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.rarity) AS sum_fruits__sum_rarity
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_rarity" > $1::FLOAT
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-async-decimal-gt-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.rarity) AS sum_fruits__sum_rarity
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_rarity" > %(param_1)s
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-async-float-eq-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_water_percent" = $1::FLOAT
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-async-float-eq-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_water_percent" = %(param_1)s
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-async-float-gt-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_water_percent" > $1::FLOAT
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-async-float-gt-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_water_percent" > %(param_1)s
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-async-int-eq-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.sweetness) AS sum_fruits__sum_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_sweetness" = $1::FLOAT
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-async-int-eq-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.sweetness) AS sum_fruits__sum_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_sweetness" = %(param_1)s
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-async-int-gt-match-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.sweetness) AS sum_fruits__sum_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_sweetness" > $1::FLOAT
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-async-int-gt-match-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.sweetness) AS sum_fruits__sum_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_sweetness" > %(param_1)s
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-sync-decimal-eq-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.rarity) AS sum_fruits__sum_rarity
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_rarity" = %(param_1)s
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-sync-decimal-gt-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.rarity) AS sum_fruits__sum_rarity
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_rarity" > %(param_1)s
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-sync-float-eq-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_water_percent" = %(param_1)s
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-sync-float-gt-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_water_percent" > %(param_1)s
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-sync-int-eq-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.sweetness) AS sum_fruits__sum_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_sweetness" = %(param_1)s
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-sync-int-gt-match-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.sweetness) AS sum_fruits__sum_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_sweetness" > %(param_1)s
  '''
# ---
